@@ -41,6 +41,7 @@ Contributors:
     Sebastian Rasmussen   (duration bug fix, 64-bit API fix)
     Martin Willers        (rename check's internal list API to start with check_)
     bross                 (patches for msys/mingw32 support)
+    Pino Toscano          (GNU/Hurd support for subsecond timeouts)
 
 Anybody who has contributed code to Check or Check's build system is
 considered an author.  Send patches to this file to 
