@@ -2,6 +2,10 @@ In development:
 
 * Check compiles for the Windows using x86_64-w64-mingw32.
 
+* On systems without timer_settimer, use setitimer (if available) to get
+  subsecond unit test timeouts. If setitimer is unavailable, fallback
+  on alarm.
+
 Thu, Apr 18, 2013: Released Check 0.9.10
   based on r743 (2013-04-18 11:27:03 +0200)
 
